--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h3><a href="../Movie Ranking Project/index.html">Movie Ranking List</a></h3>
     
     <img src="./assets/images/movie-ranking.png" height="200" alt="movie list pic"/>
-    <h3><a href="./birthday-invite.html">Birthday Invation</a></h3>
+    <h3><a href="./public/birthday-invite.html">Birthday Invation</a></h3>
 
     <img src="./assets/images/birthday-invite.png" width="30%" alt="birthday invation"/>
     <hr/>
