--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
     <h1>Venkatesh kulkarni's protfolio</h1>
     <h2>I'm web developer</h2>
     <hr/>
-    <h3><a href="../Movie Ranking Project/index.html">Movie Ranking List</a></h3>
+    <h3><a href="./public/movie-ranking.html">Movie Ranking List</a></h3>
     
     <img src="./assets/images/movie-ranking.png" height="200" alt="movie list pic"/>
     <h3><a href="./public/birthday-invite.html">Birthday Invation</a></h3>
 
     <img src="./assets/images/birthday-invite.png" width="30%" alt="birthday invation"/>
     <hr/>
-
+<hr/>
+<a href="./public/about.html">About Me</a>
+<a href="./public/contact.html">Contact Me</a>
 </body>
 </html>
